# runtime-custodian

./: .gitignore  Cargo.toml  README.md  pyproject.toml  requirements-plots.txt
.codex/: config.toml  project_context.md
logs/integration/: collector_config_echo.json
policies/: binwalk-monitor-policy.json  binwalk-verifier-policy.json  fastapi-monitor-policy.json  fastapi-verifier-policy.json  multiworkload-fastapi-a-verifier-policy.json  multiworkload-fastapi-b-verifier-policy.json  multiworkload-fastapi-monitor-policy.json  runtime-policy-argv-sensitive-example.json  runtime-policy-binwalk-extend-everything-tpm.json  runtime-policy-binwalk-final-summary-tpm.json  runtime-policy-binwalk-policy-triggered-tpm.json  runtime-policy-extend-everything-tpm.json  runtime-policy-final-summary-tpm.json  runtime-policy-policy-triggered-tpm.json
reporter/: evfent_schema.md
runtime-monitor/: Cargo.toml  README.md
runtime-monitor/.cargo/: config.toml
runtime-monitor/runtime-monitor/: Cargo.toml  build.rs
runtime-monitor/runtime-monitor-common/: Cargo.toml
runtime-monitor/runtime-monitor-common/src/: evidence.rs  io.rs  lib.rs
runtime-monitor/runtime-monitor-ebpf/: Cargo.toml  build.rs  rust-toolchain.toml
runtime-monitor/runtime-monitor-ebpf/src/: main.rs
runtime-monitor/runtime-monitor/src/: main.rs  tpm.rs
runtime-monitor/runtime-policy-trainer/: Cargo.toml
runtime-monitor/runtime-policy-trainer/src/: main.rs
runtime-monitor/runtime-verifier/: Cargo.toml
runtime-monitor/runtime-verifier/src/: main.rs
runtime-monitors/runtime-monitor/: Cargo.toml  README.md
runtime-monitors/runtime-monitor/runtime-monitor/: Cargo.toml  build.rs
runtime-monitors/runtime-monitor/runtime-monitor-common/: Cargo.toml
runtime-monitors/runtime-monitor/runtime-monitor-common/src/: lib.rs
runtime-monitors/runtime-monitor/runtime-monitor-ebpf/src/: main.rs
runtime-monitors/runtime-monitor/runtime-monitor/src/: main.rs
runtime-monitors/runtime-monitor/runtime-verifier/: Cargo.toml
runtime-monitors/runtime-monitor/runtime-verifier/src/: main.rs
runtime-watcher/: Cargo.toml
runtime-watcher/src/: main.rs
scripts/: build_all.sh  clean_logs.sh  combined_attestation.sh  count_events.py  gen_binwalk_samples.py  integration_lib.py  measure_event_volume.sh  measure_latency.py  plot_security.py  plot_tpm_cost.py  plot_tpm_workload.py  plotlib.py  run_bad.sh  run_bad_experiment.sh  run_benign.sh  run_binwalk_performance_experiments.py  run_concurrent_binwalk_performance_experiments.py  run_concurrent_fastapi_performance_experiments.py  run_echo_experiment.sh  run_monitor.sh  run_monitor_scoped.sh  run_performance_experiments.py  run_security_experiments.py  run_tpm_cost_experiments.py  run_v1_integration_tests.py  run_v1_integration_tests.sh  run_verifier_scalability_experiments.py  run_workload.sh  smoke_argv_policy_workflow.py  smoke_tpm_quote_swtpm.sh  smoke_tpm_swtpm.sh  stop_workload.sh  summarise_events.py  summarise_latency.py  test_collector_config.py  test_evidence_parsing.py  test_gen_binwalk_samples.py  test_plots.py  test_tpm_cost_model.py
workloads/binwalk-workload/: Dockerfile  compose.yml
workloads/fast-api-workload/: Dockerfile  compose.yml
workloads/fast-api-workload/app/: main.py
