[package]
name = "runtime-monitor-common"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[features]
default = []
user = ["aya", "anyhow", "serde", "serde_json", "sha2"]

[dependencies]
aya = { workspace = true, optional = true }
bytemuck = { workspace = true }
anyhow = { workspace = true, optional = true }
serde = { workspace = true, optional = true, features = ["derive"] }
serde_json = { workspace = true, optional = true }
sha2 = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }

[lib]
path = "src/lib.rs"
