[workspace]
resolver = "2"
members = [
    "runtime-monitor",
    "runtime-monitor-common",
    "runtime-monitor-ebpf",
    "runtime-verifier",
]
default-members = ["runtime-monitor", "runtime-monitor-common"]

[workspace.package]
license = "MIT OR Apache-2.0"
edition = "2024"

[workspace.dependencies]
aya = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-build = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log = { git = "https://github.com/aya-rs/aya", default-features = false }
aya-log-ebpf = { git = "https://github.com/aya-rs/aya", default-features = false }

anyhow = { version = "1", default-features = false }
cargo_metadata = { version = "0.23.0", default-features = false }
# `std` feature is currently required to build `clap`.
#
# See https://github.com/clap-rs/clap/blob/61f5ee5/clap_builder/src/lib.rs#L15.
clap = { version = "4.5.20", default-features = false, features = ["std"] }
env_logger = { version = "0.11.5", default-features = false }
libc = { version = "0.2.186", default-features = false }
log = { version = "0.4.22", default-features = false }
tokio = { version = "1.40.0", features = ["time"] }
which = { version = "8.0.2", default-features = false }

bytemuck = { version = "1.14.0", features = ["derive"] }
serde = { version = "1", default-features = false, features = ["std"] }
serde_json = { version = "1", default-features = false, features = ["std"] }

[profile.release.package.runtime-monitor-ebpf]
debug = 2
codegen-units = 1
strip = false
