[package]
name = "runtime-verifier"
version = "0.1.0"
edition.workspace = true

license.workspace = true

[dependencies]
anyhow = { workspace = true, default-features = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }

[[bin]]
name = "runtime-verifier"
path = "src/main.rs"
